Removed the ng-show that wasn't working from my input fields in quoteBook

--- a/week03/day02/quoteBook/styles.css
+++ b/week03/day02/quoteBook/styles.css
@@ -12,3 +12,9 @@
   text-transform: uppercase;
   font-size: .8em;
 }
+
+.inputHolder {
+  border: 1px solid red;
+  margin: 10px 5px;
+  padding: 10px 25px;
+}
