--- a/week03/day04/itunes/style.css
+++ b/week03/day04/itunes/style.css
@@ -3,9 +3,13 @@ html, body {
   width: 100%;
 }
 
+.ngSortPriority {
+  display: none;
+}
+
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 100%; 
+    width: 100%;
     height: 1200px;
     min-height: 100%;
 }
